# WareBot_Server

./: .gitignore  CMakeLists.txt  Contributing.md  README.md  package.xml
launch/: vizanti_rws.launch.py  vizanti_server.launch.py
pi/: pi_bridge.launch.py  pose_sync.py  setup_pi.sh
public/: index.html
public/assets/: default_layout.json
public/js/: main.js
public/templates/initialpose/: initialpose_script.js
public/templates/reconfigure/: reconfigure_script.js
public/templates/simplegoal/: simplegoal_icon.html  simplegoal_script.js
scripts/: pose_persistence.py  server.py  service_handler.py
srv/: GetLastPose.srv
vizanti_server/: CMakeLists.txt  package.xml
vizanti_server/launch/: vizanti_rws.launch.py  vizanti_server.launch.py
vizanti_server/public/: iconbar.html
vizanti_server/public/css/: style.css
vizanti_server/public/js/: setup.js
vizanti_server/public/templates/initialpose/: initialpose_icon.html
vizanti_server/public/templates/map/: map_script.js
vizanti_server/public/templates/nodemgr/: nodemgr_script.js
vizanti_server/public/templates/rosbag/: rosbag_script.js
vizanti_server/public/templates/settings/: settings_modal.html  settings_script.js
vizanti_server/public/templates/teleop/: teleop_script.js
vizanti_server/public/templates/tf/: tf_script.js
vps/: SETUP_GUIDE.txt  config.json  pose_collector.py  requirements.txt  server.py  setup_vps.sh  warebot.nginx.conf
